feat: add a route for fetching list of applicable rules
