# src/routes/validate.ts
@@ -1,43 +1,60 @@
-import { Document } from "@stoplight/spectral-core"
-import Parsers from "@stoplight/spectral-parsers"
-import { Express } from 'express'
-import { ERROR_TYPE, RapLPBaseApiError } from "../util/RapLPBaseApiError.ts"
-import { decodeBase64String, processApiSpec, validateYamlInput } from "../util/apiUtil.ts"
-import { YamlContentDto } from "../model/YamlContentDto.ts"
-import { importAndCreateRuleInstances } from "../util/ruleUtil.ts"
-import { ApiInfo } from "../model/ApiInfo.ts"
+import { Document } from "@stoplight/spectral-core";
+import Parsers from "@stoplight/spectral-parsers";
+import { Express } from "express";
+import { ERROR_TYPE, RapLPBaseApiError } from "../util/RapLPBaseApiError.ts";
+import {
+  decodeBase64String,
+  processApiSpec,
+  validateYamlInput,
+} from "../util/apiUtil.ts";
+import { YamlContentDto } from "../model/YamlContentDto.ts";
+import { importAndCreateRuleInstances } from "../util/ruleUtil.ts";
+import { ApiInfo } from "../model/ApiInfo.ts";
+import { validationRules } from "../model/validationRules.ts";
 
 export const registerValidationRoutes = (app: Express) => {
+  // Route for raw content upload.
+  app.post("/api/v1/validate/content", async (req, res, next) => {
+    try {
+      const yamlContent: YamlContentDto = req.body;
 
-    // Route for raw content upload.
-    app.post("/api/v1/validate/content", async (req, res, next) => {
-        try {
-            const yamlContent: YamlContentDto = req.body
+      let yamlContentString: string;
+      yamlContentString = decodeBase64String(yamlContent.yaml);
 
-            let yamlContentString: string;
-            yamlContentString = decodeBase64String(yamlContent.yaml)
+      if (!validateYamlInput(yamlContentString)) {
+        next(
+          new RapLPBaseApiError(
+            "Kunde inte parsa YAML filen.",
+            ERROR_TYPE.BAD_REQUEST
+          )
+        );
+        return;
+      }
 
-            if (!validateYamlInput(yamlContentString)) {
-                next(new RapLPBaseApiError("Kunde inte parsa YAML filen.", ERROR_TYPE.BAD_REQUEST));
-                return
-            }
+      const apiSpecDocument = new Document(yamlContentString, Parsers.Yaml, "");
 
-            const apiSpecDocument = new Document(
-                yamlContentString,
-                Parsers.Yaml,
-                ""
-            );
+      const rules = await importAndCreateRuleInstances(yamlContent.categories);
 
-            const rules = await importAndCreateRuleInstances(yamlContent.categories);
+      const result = await processApiSpec(rules, apiSpecDocument);
+      res.send(result);
+    } catch (e) {
+      next(e);
+    }
+  });
 
-            const result = await processApiSpec(rules, apiSpecDocument)
-            res.send(result)
-        } catch (e) {
-            next(e)
-        }
-    })
+  app.get("/api/v1/validation/rules", (req, res) => {
+    res.send(validationRules);
+  });
 
-    app.get("/api/v1/api-info", async (req, res, next) => {
-        res.send(new ApiInfo("RAP-LP", "1.0.11", new Date().toDateString(), "http://example.digg.se/RAP-LP-docs", "development"));
-    })
-}
+  app.get("/api/v1/api-info", async (req, res, next) => {
+    res.send(
+      new ApiInfo(
+        "RAP-LP",
+        "1.0.11",
+        new Date().toDateString(),
+        "http://example.digg.se/RAP-LP-docs",
+        "development"
+      )
+    );
+  });
+};
